--- a/modals.css
+++ b/modals.css
@@ -17,7 +17,7 @@
   left: 20vw;
   right: 20vw;
   width: 60vw;
-  background: #444;
+  background: #fff;
   z-index: 999;
   box-shadow: 0 0 15px 0 #000;
   /*animation: fromRight 0.5s;*/
@@ -48,10 +48,10 @@
   padding: 14px 20px 10px 20px;
   font-size: 20px;
   border-bottom: 0;
-  background: #222;
+  background: #fff;
   user-select: none;
   z-index: 3;
-  color: #eee;
+  color: #000;
   text-align: center;
 }
 
@@ -62,14 +62,15 @@
   margin-top: 11px;
   position: relative;
   left: 0;
-  background: linear-gradient(90deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), #4caf50, palevioletred, red, orange, #2196f3, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0));
+  background: linear-gradient(90deg, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0), #4caf50, purple, red, orange, #2196f3, rgba(255, 255, 255, 0), rgba(255, 255, 255, 0));
   width: 100%;
 }
 
 .modal-content {
   /*padding: 5px 20px 20px 20px;*/
   min-height: 100px;
-  color: #eee;
+  background: #eee;
+  color: #000;
   overflow: auto;
   max-height: 500px;
 }
@@ -80,8 +81,8 @@
 
 .modal-content-confirm {
   min-height: 0px;
-  background: #444;
-  color: #eee;
+  background: #eee;
+  color: #000;
   padding: 30px;
   padding-bottom: 40px;
   font-size: 13px;
@@ -93,8 +94,8 @@
   padding: 12px 14px 8px 14px;
   text-align: right;
   font-size: 14px;
-  color: #eee;
-  background: #222;
+  color: #000;
+  background: #fff;
 }
 
 .modal .im-tabs-tablist {
@@ -105,11 +106,11 @@
   margin: 2px;
   border-radius: 2px;
   border: 0px solid #fff;
-  background: #393939;
+  background: #dfdfdf;
 }
 
 .modal-content .im-cat-header {
-  border: 1px solid rgba(255, 255, 255, 0.1);
+  border: 1px solid #ddd;
 }
 
 .modal-content .im-tabs-area {
@@ -179,7 +180,7 @@
 }
 
 .im-items-selection:hover {
-  background: #222;
+  background: #2196f3;
   color: #fff;
   cursor: pointer;
 }
@@ -191,7 +192,7 @@
 .im-diagram-items-modal {
   position: sticky;
   top: 0px;
-  background: #444;
+  background: #eee;
   box-shadow: 0 0 8px -4px #000;
   padding-top: 4px;
   padding-bottom: 4px;
