--- a/datensen-moon-modeler-report.css
+++ b/datensen-moon-modeler-report.css
@@ -4,17 +4,17 @@
 }
 
 #mm-main-navs {
-    background: #333;
+    background: #ddd;
     z-index: 6;
 }
 
 #mm-nav-expander {
     display: none;
-    background: #222;
+    background: linear-gradient(180deg, #fff, #ddd);
 }
 
 #mm-nav-expander i {
-    color: white;
+    color: black;
     cursor: pointer;
 }
 
@@ -28,20 +28,19 @@
     display: flex;
     flex-direction: row;
     box-shadow: 0px 0px 5px -2px #000;
-    border-bottom: 1px solid rgba(0,0,0,0.2);
-    background: linear-gradient(180deg, #222, #222);
+    background: linear-gradient(180deg, #fff, #ddd);
 }
 
 .mm-nav-a {
     display: inline-block;
     padding: 10px 20px;
     text-decoration: none; 
-    color: white;
+    color: #333;
     cursor: pointer;
 }
 
 .mm-nav-active {
-    background: rgb(3, 169, 244);
+    background: #2196f3;
     color: white;
 }
 
@@ -66,7 +65,7 @@
 }
 
 .tob {
-    color: white;
+    color: #333;
     padding-top: 20px;
     padding-left: 20px;
 }
@@ -87,14 +86,14 @@
     left: 0;
     right: 0;    
     margin: auto;
-    background: #333;
-    box-shadow: 0 0 20px -10px #000;
+    background: #fff;
+    box-shadow: 0 0 20px -10px #333;
     border-radius: 4px;
     overflow: hidden;
 }
 
 #mm-content {
-    overflow: auto;
+    overflow: unset;
 } 
 
 #mm-side-wrapper {
@@ -106,11 +105,10 @@
 }
 
 #mm-report-content {
-    overflow: hidden;
     height: 100%;
     width: 100%;
     display: grid;
-    grid-template-columns: minmax(250px, max-content) 1fr;
+    grid-template-columns: 0 1fr;
 }
 
 #mm-report-content.mm-report-content-cols-1 {
@@ -122,11 +120,11 @@
 #mm-content {
     height: 100%;
     width: 100%;
-    background: #333;
+    background: #fff;
 }
 
 #mm-side {
-    background: #404040;
+    background: #ddd;
     overflow: hidden;
 }
 
@@ -140,7 +138,6 @@
 
 .mm-section-active {
     display: block;
-    height: 100%;
 }
 
 #mm-side-content {
@@ -153,18 +150,17 @@
 
 
 .mm-sidenav-item-active > div {
-    background: #222;
+    background: #2196f3;
     color: #fff;  
     cursor: pointer;
 }
 
 .mm-detail:not(.mm-display-none) {
-    /*display: grid;*/    
-}
+    /*display: grid;    */  
+ }
 
 .mm-detail {
-    padding: 20px 30px 20px 30px;
-    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
+    padding: 2px 3px 20px 3px;
 }
 
 .mm-subsection {
@@ -174,15 +170,17 @@
 }
 
 .mm-props{
-    background: rgba(0,0,0,0.1);
+    background: rgba(0,0,0,0.05);
     padding: 15px;   
 }
 
 .mm-subtitle {
-    color:darkorange;
+    color:#000;
     margin: 2px 8px;
     font-size: 12px;
     text-transform: uppercase;
+    font-weight: 700;
+    
 
 }
 
@@ -235,29 +233,30 @@
 }
 
 .mm-d-c {
-    color: #999;
+    color: #444;
     display: inline-block;
-    font-size: 12px;
+    font-size: 11px;
     font-weight: 300;
     padding: 5px 8px 1px 8px;
     text-transform: uppercase;  
 }
 
 .mm-d-v {
-    color: #fff;
+    color: #222;
     display: inline-block;
-    font-size: 14px;
+    font-size: 13px;
     font-weight: 300;
     padding: 1px 8px;
     align-self: end;
-    background: rgba(0,0,0,0.15);
+    background: rgba(0,0,0,0.08);
     height: auto;
     margin: 1px 1px 0 1px;
     min-height: 20px;
+    line-height: 14px;
 }
 
 .mm-d-c-i {
-    color: #999;
+    color: #666;
     display: block;
     font-size: 10px;
     font-weight: 300;
@@ -269,26 +268,26 @@
 }
 
 .mm-d-v-i {
-    color: #fff;
+    color: #333;
     display: inline-block;
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 300;
     padding: 1px 8px 1px 8px;
     align-self: end;
 }
 
 .mm-d-v-i:after {
-        content: "";
+        content: " ";
         width: auto;
         height: 2px;
-        background: rgb(3, 169, 244);
+        border-bottom: 2px solid black;
         margin-top: 2px;
         display: block;
     
 }
 
 .mm-d-c-l {
-    color: #999;
+    color: #666;
     display: block;
     font-size: 10px;
     font-weight: 300;
@@ -300,7 +299,7 @@
 }
 
 .mm-d-v-l {
-    color: #fff;
+    color: #333;
     display: inline-block;
     font-size: 14px;
     font-weight: 300;
@@ -321,7 +320,7 @@
     content: " ";
     width: 4px;
     height: 4px;
-    background: darkorange;
+    background: #444;
     position: absolute;
     left: 8px;
     top: 10px;
@@ -335,12 +334,12 @@
 
 .mm-spacer-xs {
     height: 0;
-    background: #333;
+    background: #ddd;
     display: none;
 }
 
 .mm-d-i {
-    padding: 10px;
+    padding: 10px 0;
 }
 
 .mm-modal-fix {
@@ -353,12 +352,12 @@
 }
 
 .mm-no {
-    color: rgba(255,255,255,0.6);
+    color: #444;
     font-style: italic;
 }
 
 .mm-yes {
-    color: rgba(255,255,255,1);
+    color: #222;
 }
 
 .mm-props .mm-d-v {
@@ -369,7 +368,6 @@
 .im-btn-default {
     padding: 8px 16px;
     border: 1px solid transparent;
-  
     font-size: 12px;
     border-radius: 20px;
     text-transform: uppercase;
@@ -381,7 +379,7 @@
   
 
 a, a.active, a.visited {
-    color:rgb(3, 169, 244);
+    color:#2196f3;
     text-decoration: none;
 }
 
@@ -390,7 +388,7 @@ a, a.active, a.visited {
     min-width: 50vh;
     width: 80vw;
     margin: 50px auto;
-    color: #eee;
+    color: #333;
 }
 
 .mm-header-1 {
@@ -412,19 +410,19 @@ a, a.active, a.visited {
 }
 
 pre {
-    background: rgba(0,0,0,0.1);
-    padding: 10px 20px;
+    background: rgba(0,0,0,0.03);
+    padding: 10px 10px;
     margin: 1px 0;
     white-space: pre-wrap;
 }
 
 .mm-description {
-    color: yellowgreen;
+    color: purple
 }
 
 #mm-search {
-    background: rgba(0,0,0,0.1);
-    box-shadow: 0 0 10px -3px #000;
+    background: rgba(0,0,0,0.05);
+    box-shadow: 0px 0 3px -2px #000;
     z-index: 2;
 }
 
