--- a/searchbar.css
+++ b/searchbar.css
@@ -1,13 +1,10 @@
 input {
-border-radius: 2px;
-padding: 0 2px;
-font-family: "Open Sans";
-background: #646464;
-color: #fff;
-min-width: 40px;
-width: auto;
-}
-
+  border-radius: 2px;
+  padding: 0 2px;
+  font-family: "Open Sans";
+  min-width: 40px;
+  width: auto;
+  }
 .im-search-bar {
   height: 20px;
   display: grid;
@@ -18,9 +15,9 @@ width: auto;
   padding-top: 2px;
   padding-bottom: 2px;
   border-radius: 100px;
-  border: 0px solid #646464;
+  border: 1px solid #ccc;
   margin: 7px 7px;
-  background: #646464;
+  background: #fff;
 }
 
 .im-search-fixed-width {
@@ -48,7 +45,7 @@ width: auto;
 }
 
 .im-search-bar input::placeholder {
-  color: #000;
+  color: #666;
   font-style: italic;
 }
 
