--- a/datensen-moon-modeler-report.css
+++ b/datensen-moon-modeler-report.css
@@ -4,17 +4,17 @@
 }
 
 #mm-main-navs {
-    background: #ddd;
+    background: #333;
     z-index: 6;
 }
 
 #mm-nav-expander {
     display: none;
-    background: linear-gradient(180deg, #fff, #ddd);
+    background: #222;
 }
 
 #mm-nav-expander i {
-    color: black;
+    color: white;
     cursor: pointer;
 }
 
@@ -28,19 +28,20 @@
     display: flex;
     flex-direction: row;
     box-shadow: 0px 0px 5px -2px #000;
-    background: linear-gradient(180deg, #fff, #ddd);
+    border-bottom: 1px solid rgba(0,0,0,0.2);
+    background: linear-gradient(180deg, #222, #222);
 }
 
 .mm-nav-a {
     display: inline-block;
     padding: 10px 20px;
     text-decoration: none; 
-    color: #333;
+    color: white;
     cursor: pointer;
 }
 
 .mm-nav-active {
-    background: #2196f3;
+    background: rgb(3, 169, 244);
     color: white;
 }
 
@@ -65,7 +66,7 @@
 }
 
 .tob {
-    color: #333;
+    color: white;
     padding-top: 20px;
     padding-left: 20px;
 }
@@ -86,14 +87,14 @@
     left: 0;
     right: 0;    
     margin: auto;
-    background: #fff;
-    box-shadow: 0 0 20px -10px #333;
+    background: #333;
+    box-shadow: 0 0 20px -10px #000;
     border-radius: 4px;
     overflow: hidden;
 }
 
 #mm-content {
-    overflow: unset;
+    overflow: auto;
 } 
 
 #mm-side-wrapper {
@@ -105,10 +106,11 @@
 }
 
 #mm-report-content {
+    overflow: hidden;
     height: 100%;
     width: 100%;
     display: grid;
-    grid-template-columns: 0 1fr;
+    grid-template-columns: minmax(250px, max-content) 1fr;
 }
 
 #mm-report-content.mm-report-content-cols-1 {
@@ -120,11 +122,11 @@
 #mm-content {
     height: 100%;
     width: 100%;
-    background: #fff;
+    background: #333;
 }
 
 #mm-side {
-    background: #ddd;
+    background: #404040;
     overflow: hidden;
 }
 
@@ -138,6 +140,7 @@
 
 .mm-section-active {
     display: block;
+    height: 100%;
 }
 
 #mm-side-content {
@@ -150,17 +153,18 @@
 
 
 .mm-sidenav-item-active > div {
-    background: #2196f3;
+    background: #222;
     color: #fff;  
     cursor: pointer;
 }
 
 .mm-detail:not(.mm-display-none) {
-    /*display: grid;    */  
- }
+    /*display: grid;*/    
+}
 
 .mm-detail {
-    padding: 2px 3px 20px 3px;
+    padding: 20px 30px 20px 30px;
+    border-bottom: 1px solid rgba(255, 255, 255, 0.1);
 }
 
 .mm-subsection {
@@ -170,17 +174,15 @@
 }
 
 .mm-props{
-    background: rgba(0,0,0,0.05);
+    background: rgba(0,0,0,0.1);
     padding: 15px;   
 }
 
 .mm-subtitle {
-    color:#000;
+    color:darkorange;
     margin: 2px 8px;
     font-size: 12px;
     text-transform: uppercase;
-    font-weight: 700;
-    
 
 }
 
@@ -233,30 +235,29 @@
 }
 
 .mm-d-c {
-    color: #444;
+    color: #999;
     display: inline-block;
-    font-size: 11px;
+    font-size: 12px;
     font-weight: 300;
     padding: 5px 8px 1px 8px;
     text-transform: uppercase;  
 }
 
 .mm-d-v {
-    color: #222;
+    color: #fff;
     display: inline-block;
-    font-size: 13px;
+    font-size: 14px;
     font-weight: 300;
     padding: 1px 8px;
     align-self: end;
-    background: rgba(0,0,0,0.08);
+    background: rgba(0,0,0,0.15);
     height: auto;
     margin: 1px 1px 0 1px;
     min-height: 20px;
-    line-height: 14px;
 }
 
 .mm-d-c-i {
-    color: #666;
+    color: #999;
     display: block;
     font-size: 10px;
     font-weight: 300;
@@ -268,26 +269,26 @@
 }
 
 .mm-d-v-i {
-    color: #333;
+    color: #fff;
     display: inline-block;
-    font-size: 20px;
+    font-size: 24px;
     font-weight: 300;
     padding: 1px 8px 1px 8px;
     align-self: end;
 }
 
 .mm-d-v-i:after {
-        content: " ";
+        content: "";
         width: auto;
         height: 2px;
-        border-bottom: 2px solid black;
+        background: rgb(3, 169, 244);
         margin-top: 2px;
         display: block;
     
 }
 
 .mm-d-c-l {
-    color: #666;
+    color: #999;
     display: block;
     font-size: 10px;
     font-weight: 300;
@@ -299,7 +300,7 @@
 }
 
 .mm-d-v-l {
-    color: #333;
+    color: #fff;
     display: inline-block;
     font-size: 14px;
     font-weight: 300;
@@ -320,7 +321,7 @@
     content: " ";
     width: 4px;
     height: 4px;
-    background: #444;
+    background: darkorange;
     position: absolute;
     left: 8px;
     top: 10px;
@@ -334,12 +335,12 @@
 
 .mm-spacer-xs {
     height: 0;
-    background: #ddd;
+    background: #333;
     display: none;
 }
 
 .mm-d-i {
-    padding: 10px 0;
+    padding: 10px;
 }
 
 .mm-modal-fix {
@@ -352,12 +353,12 @@
 }
 
 .mm-no {
-    color: #444;
+    color: rgba(255,255,255,0.6);
     font-style: italic;
 }
 
 .mm-yes {
-    color: #222;
+    color: rgba(255,255,255,1);
 }
 
 .mm-props .mm-d-v {
@@ -368,6 +369,7 @@
 .im-btn-default {
     padding: 8px 16px;
     border: 1px solid transparent;
+  
     font-size: 12px;
     border-radius: 20px;
     text-transform: uppercase;
@@ -379,7 +381,7 @@
   
 
 a, a.active, a.visited {
-    color:#2196f3;
+    color:rgb(3, 169, 244);
     text-decoration: none;
 }
 
@@ -388,7 +390,7 @@ a, a.active, a.visited {
     min-width: 50vh;
     width: 80vw;
     margin: 50px auto;
-    color: #333;
+    color: #eee;
 }
 
 .mm-header-1 {
@@ -410,19 +412,19 @@ a, a.active, a.visited {
 }
 
 pre {
-    background: rgba(0,0,0,0.03);
-    padding: 10px 10px;
+    background: rgba(0,0,0,0.1);
+    padding: 10px 20px;
     margin: 1px 0;
     white-space: pre-wrap;
 }
 
 .mm-description {
-    color: purple
+    color: yellowgreen;
 }
 
 #mm-search {
-    background: rgba(0,0,0,0.05);
-    box-shadow: 0px 0 3px -2px #000;
+    background: rgba(0,0,0,0.1);
+    box-shadow: 0 0 10px -3px #000;
     z-index: 2;
 }
 
